--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>WEB1 = Welcome</title>
     <meta charset="utf-8">
 </head>
-<body>
+<body style="background-color:black;color:white;">
     <h1><a href="index.html">WEB</a></h1>
     <ol>
         <li><a href="1.html">HTML </a></li>
